<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.amruthpillai.qrpro.SplashActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_splash_generate"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/splash_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/splash_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/splash_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_app_name"
            android:layout_centerHorizontal="true"
            android:text="@string/splash_app_version"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/splash_app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/splash_app_author"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

</RelativeLayout>
