<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amruthpillai.qrpro.GenerateActivity">

    <RelativeLayout
        android:id="@+id/btn_plaintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/ic_plaintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_plaintext"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/scan_plaintext" />

        <TextView
            android:id="@+id/txt_plaintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/ic_plaintext"
            android:text="@string/scan_plaintext"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_plaintext"
        android:background="@color/colorAccent"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/ic_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_website"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/scan_website" />

        <TextView
            android:id="@+id/txt_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/ic_website"
            android:text="@string/scan_website"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_website"
        android:background="@color/colorPrimary"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/ic_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_contact"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/scan_contact" />

        <TextView
            android:id="@+id/txt_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/ic_contact"
            android:text="@string/scan_contact"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </RelativeLayout>

</RelativeLayout>
